# DelayPlugin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Delay.jucer  LICENSE  README.md  TestDelay.filtergraph  getBuild
.github/workflows/: cmake-single-platform.yml
JuceLibraryCode/: JucePluginDefines.h
Source/: Constants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Reverb.cpp  Reverb.h
cmake/: CPM.cmake
modules/: gui_components.cpp  gui_components.h
plugins/: CMakeLists.txt
plugins/include/Delay/: Constants.h  Headers.h  PluginEditor.h  PluginProcessor.h  Reverb.h
plugins/source/: PluginEditor.cpp  PluginProcessor.cpp  Reverb.cpp
testalg/: settings.yaml  testalg.py
testalg/modules/: reverb_params_template.yaml  stream.py  timefx.py
